# green_means_go

./: .gitignore  AI_REPORTS_IMPLEMENTATION_SUMMARY.md  AI_REPORT_ENHANCEMENTS.md  AI_REPORT_SETUP.md  PROFESSIONAL_REPORT_UI_GUIDE.md  QUICK_START_AI_REPORTS.md  README.md  build_rust.bat  data_sources.md  deploy.sh  green_means_go_brief.md  install_deps.bat  project_schematic.html  requirements.txt  run_api.bat  show_results.bat  sustainability-assessment-presentation.html  tech_explain.md
african-lca-frontend/: LOGO_DESIGN.md  README.md  SEO_IMPLEMENTATION.md  package-lock.json  package.json
african_lca_backend/: Cargo.toml
african_lca_backend/src/: lca.rs  lib.rs  main.rs  models.rs  utils.rs
african_lca_backend/src/processing/: data.rs  lca.rs  mod.rs  models.rs
african_lca_backend/src/production/: data.rs  lca.rs  lci.rs  lci_extended.rs  mod.rs  models.rs
app/: .env.example  alembic.ini  assessment_stream.py  db.py  ghana_maize_farmer_report_20250825_225047.txt  main.py  models.py  research_export.py  review.py  scenarios.py  share_store.py  store.py  test_auth_workspace.py  test_batch_jobs.py  test_ghana_maize_farmer.py  test_imports.py  test_method_lab.py  test_processing_api.py  test_recharacterize_contribution.py  test_recommendations_api.py  test_research_export.py  test_review.py  test_revisions.py  test_scenarios.py  test_share.py  test_studies.py  test_study_meta.py  test_versioning.py
engine/: README.md  activity_defaults.py  adapter.py  calibrate_bands.py  calibrate_process_bands.py  contribution_sankey.py  field_model.py  flowmap.py  inputs.py  (+27 more)
(+156 files in other folders)
