[package]
name = "african-lca-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
csv = "1.3"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
rand_distr = "0.4"

[lib]
name = "african_lca_backend"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
